# TravelMind

./: .gitignore  ENVIRONMENT_SETUP.md  MODEL_DATA_SETUP.md  README.md  main.py  model.pt  model_utils.py  prepare_data.py  pyproject.toml  requirements.txt  train_dpo.py  train_grpo.py  train_ppo.py  train_sft.py
checkpoints/: README.md
checkpoints/dpo/checkpoint-160/: adapter_model.safetensors  optimizer.pt  scaler.pt  scheduler.pt  trainer_state.json
checkpoints/dpo/checkpoint-168/: optimizer.pt  scaler.pt  scheduler.pt  trainer_state.json
checkpoints/dpo/final_model/: adapter_config.json  adapter_model.safetensors
checkpoints/grpo/checkpoint-1300/: adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
checkpoints/grpo/checkpoint-1350/: README.md  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
checkpoints/grpo/final_model/: adapter_model.safetensors
checkpoints/sft/checkpoint-450/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
checkpoints/sft/checkpoint-468/: adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
checkpoints/sft/final_model/: adapter_model.safetensors
scripts/: setup.sh  start.sh
src/: app.py
src/agents/: agent.py  bm25.py  chat_pdf.py  corrective_rag.py  mem_walker.py  prompt_template.py  rag.py  rag_dispatcher.py  self_rag.py  tools.py  zhipuAPI.py
src/agents/travel_knowledge/: web_crawler.py
src/agents/travel_knowledge/tour_pdfs/: 上海_tmp.html
src/configs/: config.py  model_config.yaml  train_config.yaml
src/evaluation/: qa_evaluate.py
src/finetune/: dpo_trainer.py  grpo_trainer.py  multi_task_trainer.py  ppo_train_from_scratch.py  ppo_trainer.py  sft_trainer.py
src/kg/: basic_user_interface.py  basic_utils.py  initial_card_processing.py
src/ui/: app.py  mindmap.py  rag_web_demo.py
src/utils/: utils.py
